# Image-Style-Transfer-with-WebAssembly

./: package-lock.json
.next/: trace
image-style-transfer-nextjs/: .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  build-wasm.sh  docker-compose.yml  generate_models.py  next.config.js  package-lock.json  package.json  test-wasm.html  tsconfig.json  tsconfig.tsbuildinfo
image-style-transfer-nextjs/.github/workflows/: deploy.yml
image-style-transfer-nextjs/models/: starry_night.onnx
image-style-transfer-nextjs/public/: sw.js
image-style-transfer-nextjs/public/models/: anime_studio_ghibli.onnx  anime_style.onnx  cyberpunk_neon.onnx  monet_impressionist.onnx  monet_water_lilies.onnx  picasso_cubist.onnx  registry.json  van_gogh_starry_night.onnx
image-style-transfer-nextjs/src/app/: layout.tsx  page.tsx
image-style-transfer-nextjs/src/components/: RealtimeWebcam.tsx  StyleTransferApp.tsx
image-style-transfer-nextjs/src/lib/: wasmLoader.js  webgpu-inference.ts  webgpu-onnx.ts
image-style-transfer-nextjs/src/lib/wasm/: package.json  style_transfer_wasm.d.ts  style_transfer_wasm.js  style_transfer_wasm_bg.wasm  style_transfer_wasm_bg.wasm.d.ts
image-style-transfer-nextjs/src/types/: wasm.d.ts  webgpu.d.ts
image-style-transfer-nextjs/wasm-engine/: Cargo.toml
image-style-transfer-nextjs/wasm-engine/src/: lib.rs
image-style-transfer-nextjs/wasm-engine/tests/: integration_tests.rs
