[package]
name = "style-transfer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "File",
  "FileReader",
  "Blob",
  "Url",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "Navigator",
] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
wee_alloc = "0.4.5"

[dependencies.wasm-bindgen-test]
version = "0.3"

[profile.release]
opt-level = "s"
lto = true
debug = false
panic = "abort"
